# Foundation_frame_analysis

./: README.md  app.py  pyproject.toml
pages/: directors.py  financial.py  genres.py  overview.py
utils/: __init__.py  analysis.py  data_loader.py  relatorio_pdf.py  theme.py  visualization.py
