[project]
name = "Foundation_frame_analysis"
version = "0.1.0"
description = "Dashboard interativo de análise de filmes TMDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
]
